--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "Repeat Web App",
+  "name": "repeat-web-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "repository": "gi@tgithub.com/HakkStreetBoys/repeat-web-app.git",
-  "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
-    "test:watch": "npm run test -- --watch"
+  "description": "``` \t> npm install \t> npm start ```",
+  "main": "webpack.config.js",
+  "directories": {
+    "test": "test"
   },
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "babel-preset-stage-1": "^6.1.18",
+    "lodash": "^3.10.1",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-redux": "^4.0.0",
+    "react-router": "^2.0.1",
+    "redux": "^3.0.4"
+  },
   "devDependencies": {
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
@@ -25,13 +29,19 @@
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
-  "dependencies": {
-    "babel-preset-stage-1": "^6.1.18",
-    "lodash": "^3.10.1",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-redux": "^4.0.0",
-    "react-router": "^2.0.1",
-    "redux": "^3.0.4"
-  }
+  "scripts": {
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
+    "test:watch": "npm run test -- --watch"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HakkStreetBoys/repeat-web-app.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/HakkStreetBoys/repeat-web-app/issues"
+  },
+  "homepage": "https://github.com/HakkStreetBoys/repeat-web-app#readme"
 }
