--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "test": "test"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
-    "react-router": "^2.0.1",
-    "redux": "^3.0.4"
+    "react-router": "^2.0.0-rc5",
+    "redux": "^3.0.4",
+    "redux-form": "^6.6.1",
+    "redux-promise": "^0.5.3"
   },
   "devDependencies": {
     "babel-core": "^6.2.1",
